Trying to fix layout issue in reminder / calendar widgit on list rendering.

--- a/src/styles/calendarw.css
+++ b/src/styles/calendarw.css
@@ -4,8 +4,14 @@ body {
 .calendar {
     height: 40vh;
     width: 100%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 .calendar-container {
-    /* margin-top: -20vh; */
+    position: absolute;
+    margin-top: 2vh;
+
+}
+
+.reminder-body-start {
+    position: static;
 }
